clusters/dextek/apps/monitoring/vpa/goldilocks/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames:
    - goldilocks.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: goldilocks-dashboard
          port: 80
